// TODO message结构的属性名请使用 驼峰小写字母开始
// TODO enum枚举的属性名请使用 驼峰大写字母开始
syntax = "proto3";
option go_package = "/pb";
package pb;

// 获取道具信息
// game.player.itemInfo
message S2CItemInfo {
  map<int32, int64> items = 1;//道具集合
}

// 使用道具
// game.player.itemUse
message C2SItemUse {
  int32 itemId = 1; // 道具id
  int32 count = 2; // 使用数量
}
// 使用道具
// game.player.itemUse
message S2CItemUse {
}


